--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,17 @@
   -webkit-text-size-adjust: 100%;
 }
 
+body {
+  font-family: 'Outfit', sans-serif;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  justify-content: center; 
+  align-items: center; 
+  color: #FFF;
+  background: var(--gradientes-gradiente-hover, linear-gradient(90deg, #7b33da 0%, #c377e9 100%));
+}
+
 a {
   font-weight: 500;
   color: #646cff;
