--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -7,28 +7,88 @@ header {
 }
 
 .image_logo {
-    margin-left: -130px;
+    margin-left: -160px;
 }
 
-.search-box {
+.search-container {
+    overflow: hidden;
+    float: right;
+    height: 4em;
+    width: 4em;
+    border-radius: 2em;
+    box-shadow: 0 0 4px #9947ff;
+    -moz-transition: all 0.35s;
+    transition: all 0.35s;
+    -webkit-transition: all 0.35s;
+  }
+  
+  .search-container:hover,
+  .search-container:focus,
+  .search-container:focus-within {
+    width: 25em;
+    border-radius: 5px 2em 2em 5px;
+    outline: none;
+  }
+  .search-container:hover input,
+  .search-container:focus input,
+  .search-container:focus-within input {
+    display: inline-block;
+    width: 19em;
+  }
+  
+  input {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    float: left;
+    width: 0em;
+    height: 2em;
+    margin: 1em;
+    margin-right: -4.5em;
+    background: #fff;
+    color: #9947ff;
+    font-size: 1em;
+    font-weight: 600;
+    padding: 0px;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2) inset;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+    -moz-transition: all 0.25s;
+    transition: all 0.25s;
+    -webkit-transition: all 0.25s;
+  }
+  
+  input:focus {
+    outline: none;
+    box-shadow: 0 -1px 1px rgba(255, 255, 255, 0.25),
+    0 1px 5px rgba(0, 0, 0, 0.15);
+  }
+  
+  
+  .button {
     display: flex;
     align-items: center;
-    gap: 8px;
-    padding: 8px 16px;
-    border-radius: 6px;
-    background: var(--gradientes-gradiente-normal, linear-gradient(90deg, #7b33da 0%, #c377e9 100%));
-    border: none;
-    color: var(--cores-branco, #FFF);
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 30px;
-}
+    justify-content: center;
+    float: right;
+    width: 1.75em;
+    height: 1.75em;
+    margin: 0.125em;
+    background: #9947ff;
+    text-align: center;
+    font-size: 2em;
+    color: #fdf6e3;
+    border-radius: 50%;
+    box-shadow: 0 -1px 1px rgba(255, 255, 255, 0.25),
+    0 1px 1px rgba(0, 0, 0, 0.25);
+    text-shadow: 0 -2px 1px rgba(0, 0, 0, 0.3);
+  }
+  
 
-.search-text {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    padding: 2px 10px;
-    border-radius: 6px;
-    border: none;
-}
+  .button:active {
+    border: 0 !important;
+    text-shadow: 0 0 0;
+  }
+  .button i {
+    font-size: 85%;
+  }
