--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -15,6 +15,7 @@ header {
     float: right;
     height: 4em;
     width: 4em;
+    margin-right: 40px;
     border-radius: 2em;
     box-shadow: 0 0 4px #9947ff;
     -moz-transition: all 0.35s;
