--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,67 +1,172 @@
-/* Estilo padrão para telas maiores (desktop) */
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; 
     margin-bottom: 36px;
     align-items: center;
-    width: 980px;
+    width: 980px;    
 }
 
 .image_logo {
-    margin-left: -130px;
+    margin-left: -160px;
 }
 
-.search-box {
+.search-container {
+    overflow: hidden;
+    float: right;
+    height: auto;
+    width: auto;
+    margin-right: 120px;
+    border-radius: 2em;
+    box-shadow: 0 0 4px #9947ff;
+    -moz-transition: all 0.35s;
+    transition: all 0.35s;
+    -webkit-transition: all 0.35s;
     display: flex;
     align-items: center;
-    gap: 8px;
-    padding: 8px 16px;
-    border-radius: 6px;
-    background: var(--gradientes-gradiente-normal, linear-gradient(90deg, #7b33da 0%, #c377e9 100%));
-    border: none;
-    color: var(--cores-branco, #FFF);
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 30px;
-}
+    justify-content: space-between;
+  }
 
-.search-text {
+.input-search{
+  height: 63px;
+  font-size: 20px;
+  
+}
+  
+  .search-container:hover,
+  .search-container:focus,
+  .search-container:focus-within {
+    width: 28em;
+    border-radius: 5px 2em 2em 5px;
+    outline: none;
+  }
+  .search-container:hover input,
+  .search-container:focus input,
+  .search-container:focus-within input {
+    display: inline-block;
+    width: 19em;
+  }
+  
+  input {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    float: left;
+    width: 0em;
+    height: 2em;
+    margin: 1em;
+    margin-right: -4.5em;
+    background: #fff;
+    color: #9947ff;
+    font-size: 1em;
+    font-weight: 600;
+    padding: 0px;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2) inset;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+    -moz-transition: all 0.25s;
+    transition: all 0.25s;
+    -webkit-transition: all 0.25s;
+  }
+  
+  input:focus {
+    outline: none;
+    box-shadow: 0 -1px 1px rgba(255, 255, 255, 0.25),
+    0 1px 5px rgba(0, 0, 0, 0.15);
+  }
+  
+  
+  .button {
     display: flex;
     align-items: center;
-    gap: 8px;
-    padding: 2px 10px;
-    border-radius: 6px;
-    border: none;
-}
+    justify-content: center;
+    float: right;
+    width: 1.5em;
+    height: 1.5em;
+    margin: 0.125em;
+    background: #9947ff;
+    text-align: center;
+    font-size: 1.5em;
+    color: #fdf6e3;
+    border-radius: 50%;
+    box-shadow: 0 -1px 1px rgba(255, 255, 255, 0.25),
+    0 1px 1px rgba(0, 0, 0, 0.25);
+    text-shadow: 0 -2px 1px rgba(0, 0, 0, 0.3);
+  }
+  
 
-/* Estilo para telas menores (por exemplo, tablets e smartphones) */
-@media screen and  (max-width: 768px) {
-      header {
-        display: block;
-        width: 980px;
-       
-    }
+  .button:active {
+    border: 0 !important;
+    text-shadow: 0 0 0;
+  }
 
-    .image_logo {
-        margin-left: -250px;
-    }
+  .button:hover {
+    color: #FFF;
+  }
+
+  .button i {
+    font-size: 85%;
+  }
+
+  .favorites {
+    font-size: 1.2rem;
+    color: #FFFFFF;
+  }
+
+  .favorites a, a:hover, a:visited {
+    text-decoration: none;
+    color: #FFFFFF;
+  }
 
 
-    .search-box{
-        padding: 8px 8px;
-    }  
-    .search-text {
-        margin-left: 280px;
-      
-    }   
-}
+
+ /* Responsividade */
+@media (max-width: 768px) {
+  header {
+    display: inline-block;
+    flex-direction: column; /* Coloca os elementos em coluna */
+    align-items: flex-start; /* Alinha os elementos à esquerda */
+    width: 100%; /* Largura total da tela */
+    margin: 0;
+    margin-left: 10%;
     
+  }
 
+  .favorites {
+    display: inline-block;
+    font-size: 1.2rem;
+    color: #FFFFFF;
+  
+    margin: 0;
 
+  }
+ 
+  .search-container {
+    
+    float: none; 
+    width: 100%; 
+    margin: 0; 
+    margin-left: 10%;
+    
+  }
 
+  .input-search {
+    
+    width: 100%; 
+    padding-left: 5%;
+    margin: 0; 
+    margin-left: 55px;
+    margin-right: 275px;
+    margin: 0;
+    
+  }
 
+  .button {
+    width: 2em; 
+    height: 2em; 
+    margin: 0.125em 0.25em; 
+    font-size: 1em; 
+    margin: 0;
+  } 
 
-
-
-   
-
+}
