--- a/src/components/Movie/style.css
+++ b/src/components/Movie/style.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     gap: 8px;
     max-width: 194px;  
+    margin: 20px;
 }
 
 .title, 
@@ -82,3 +83,31 @@
     font-weight: 400;
     line-height: 20px;
 }
+
+.icons {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+
+
+
+/* Responsividade */
+
+@media (max-width: 480px) {
+    .movie {
+      margin:  10px; 
+    }
+    .info,
+    .title {
+      flex-direction: column; 
+      align-items: flex-start; 
+    }
+   
+    .poster>img{
+        width: 194px;
+        height: 289px;
+    }
+  }
