--- a/src/pages/Pesquisa/style.css
+++ b/src/pages/Pesquisa/style.css
@@ -5,5 +5,10 @@
     box-shadow: 0px -3px 22px 0px rgba(0, 0, 0, 0.35);
     padding: 44px 260px;
     color: white;
-    margin-top: 30vh;
+    margin-top: 10vh;
+}
+
+.pesquisa-img{
+    width: 100px;
+    height: 50px;
 }
