Correção de bugs no mecanismo de Pesquisa

--- a/src/pages/Pesquisa/style.css
+++ b/src/pages/Pesquisa/style.css
@@ -1,15 +1,25 @@
-.pesquisa-container{
+.PageWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     border-radius: 16px;
     border: 8px solid var(--gradientes-gradiente-logo, #9747FF);
     background: var(--cores-cinza-dark, #1E1F28);
     box-shadow: 0px -3px 22px 0px rgba(0, 0, 0, 0.35);
     padding: 44px 260px;
-    color: white;
-    margin-top: 10vh;
-    width: 5000px;
+    color: #FFF;
 }
 
-.pesquisa-img{
-    width: 100px;
-    height: 50px;
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    max-width: 854px; 
+}
+
+.movies {
+    display: flex;
+    gap: 36px; 
+    align-items: center;
+    justify-content: center; 
+    max-width: 920px;
 }
